change file name in test import

--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <h1>My App</h1>
         <img src="assets/big-logo.png" />
     </header>
-    
+
     <main>
 
         Make a Web App!
-        
+        <section>
+
+            <input id="add-number-1" value="55">
+            +
+            <input>
+            <button>=</button>
+            <span id="add-answer">?</span>
+        </section>
+
     </main>
 
     <footer>
