--- a/index.html
+++ b/index.html
@@ -8,27 +8,49 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My App</title>
+    <title>My Calculator</title>
 </head>
 
 <body>
     <header>
-        <h1>My App</h1>
+        <h1>My Calculator</h1>
         <img src="assets/big-logo.png" />
     </header>
 
     <main>
 
-        Make a Web App!
+    Type in your numbers and hit "="!
         <section>
-
-            <input id="add-number-1" value="55">
+            <input id="add-number-1" value="68">
             +
-            <input>
-            <button>=</button>
+            <input id="add-number-2" value="40">
+            <button id="add-button">=</button>
             <span id="add-answer">?</span>
         </section>
 
+        <section>
+            <input id="subtract-number-1" value="67">
+            -
+            <input id="subtract-number-2" value="39">
+            <button id="subtract-button">=</button>
+            <span id="subtract-answer">?</span>
+        </section>
+
+        <section>
+            <input id="multiply-number-1" value="6">
+            *
+            <input id="multiply-number-2" value="30">
+            <button id="multiply-button">=</button>
+            <span id="multiply-answer">?</span>
+        </section>
+
+        <section>
+            <input id="divide-number-1" value="80">
+            /
+            <input id="divide-number-2" value="4">
+            <button id="divide-button">=</button>
+            <span id="divide-answer">?</span>
+        </section>
     </main>
 
     <footer>
